remove type from audio tag

--- a/Android/WebViewSound/app/src/main/assets/html/page1.html
+++ b/Android/WebViewSound/app/src/main/assets/html/page1.html
@@ -11,6 +11,6 @@
         <button id="movePage2Button">ページ2</button>
     </div>
     <!-- 音声は『効果音ラボ』 https://soundeffect-lab.info/sound/button/ より借用 -->
-    <audio id="audio" src="../sound/cursor.mp3" type="audio/mp3"></audio>
+    <audio id="audio" src="../sound/cursor.mp3"></audio>
 </body>
 </html>
